# zero

./: .ci-non-windows-coveragerc.ini  .gitignore  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.md  cargo_wrapper.py  pyinstaller_wrapper.py  pyproject.toml
.github/workflows/: build.yml  python-package.yml  release.yml
.pyinstaller/: zero.spec
gimp/: button.xcf  cursor.xcf  pressed_cursor.xcf
src/: __main__.py
src/zero/: __init__.py  __main__.py  builtins.py  contextmanagers.py  display.py  game.py  game_loader.py  game_loader_plugins.py  global_config.py  logger.py  main.py  mouse.py  pygame_event_factory.py  safe_asyncio.py  sdl.py  support.py  types.py
src/zero/core/: __init__.py  types.py
src/zero/pygame/: __init__.py
src/zero/pygame_adapter/: __init__.py
src/zero/resources/: fetcher.py  loader.py
src/zero/resources/sprites/cursor/: __init__.py
src/zero/type_wrappers/: arithmetic.py  typed_dict.py  window.py
tests/: conftest.py
tests/acceptance/: conftest.py  executable_test.py  game_test.py  mouse_test.py  pyinstaller_test.py  sanity_test.py
tests/e2e/: sanity_test.py
tests/integration/: cargo_test.py  conftest.py  main_test.py  pygame_io_test.py  pygame_platform_test.py  pygames_test.py  resources_test.py  sanity_test.py
tests/unit/: conftest.py  import_main_test.py  main_test.py  mouse_test.py  resource_test.py  resources_test.py  test_zero.py  types_test.py  window_test.py  zero_test.py
tests/unit/core/: core_test.py  types_test.py
tests/unit/zero/: button_test.py  contextmanagers_test.py  display_test.py  game_test.py  import_main_test.py  ipc_test.py  mouse_test.py  sdl_test.py  window_test.py
tests/unit/zero/type_wrappers/: bit_test.py  types_test.py
tests/utils/: __init__.py  utils_test.py
