[project]
name = "zero"
version = "0.1.0"
description = ""
authors = [{ name = "suspe", email = "davidp.info1@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = [
    "pygame-ce>=2.5.5",
]

[dependency-groups]
test = [
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
]
code-style = [
    "mypy>=1.17.1,<2",
    "ruff>=0.12.7,<0.13",
]
git = [
    "pre-commit>=4.2.0,<5",
    "commitizen>=4.8.3,<5",
]
pycharm = ["setuptools==80.6.0"]
dev = [
    "annotated-types>=0.7.0",
    "pyinstaller>=6.15.0",
    "pytest-asyncio>=1.1.0",
    "pytest-profiling>=1.8.1",
    "pytest-timeout>=2.4.0",
    "ty>=0.0.1a16",
    "types-pyinstaller>=6.15.0.20250809",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv]
default-groups = [
    "test",
    "code-style",
    "git",
    "pycharm",
]

[tool.hatch.build.targets.sdist]
include = ["src/zero"]

[tool.hatch.build.targets.wheel]
include = ["src/zero"]

[tool.hatch.build.targets.wheel.sources]
"src/zero" = "zero"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov src --cov tests --cov-fail-under=100 --cov-report term-missing --timeout 10"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.ruff]
# Auto-fix everything fixable
fix = true
# Enable both linting and formatting
lint.select = ["ALL"]
lint.ignore = [
    #### specific rules
    "B024",
    "COM812", # trailing commas, no need since formatter does this for us
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203", # no blank line before a class
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "S101",
    "S311",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "PT011",
    "PT013",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

# - wip acceptance tests ------------------------------------------------------------------------- #
[[tool.mypy.overrides]]  # THIS MUST BE CONTIGUOUS WITH THE OTHER MYPY OVERRIDES OR CZ COMMIT FAILS!
module = ["tests.acceptance.mouse_test"]
ignore_errors = true

[tool.ruff.lint.per-file-ignores]
"tests/acceptance/mouse_test.py" = ["ERA001", "F821"]

[tool.ty.src]
exclude = ["tests/acceptance/mouse_test.py"]

[tool.coverage.run]
omit = [
    "tests/acceptance/mouse_test.py",
]
# - wip acceptance tests ------------------------------------------------------------------------- #
