[project]
name = "zero"
version = "0.1.0"
description = ""
authors = [{ name = "suspe", email = "davidp.info1@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = ["pygame-ce>=2.5.5", "typer-slim>=0.16.1"]

[dependency-groups]
git = ["pre-commit>=4.2.0,<5", "commitizen>=4.8.3,<5"]
code-style = [
    "mypy>=1.17.1,<2",
    "ruff>=0.12.7,<0.13",
    "ty>=0.0.1a16",
    "vulture>=2.14",
]
build = ["pyinstaller>=6.15.0", "types-pyinstaller>=6.15.0.20250809"]
test = [
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.4.0",
]

[tool.uv]
default-groups = ["git", "code-style", "build", "test"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/zero"]

[tool.hatch.build.targets.wheel]
include = ["src/zero"]

[tool.hatch.build.targets.wheel.sources]
"src/zero" = "zero"

[tool.hatch.build]
include = [
    "src/zero/resources/**/*", # ensure all non python assests included.
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov=tests",
    "--cov-fail-under=100",
    "--cov-report=term-missing",
    "--timeout=10",
]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow and should use longer timeout"]

[tool.vulture]
paths = ["tests", "src"]
sort_by_size = true
ignore_decorators = ["@fixture", "@typed_dict"]
exclude = ["**/typed_dict.py"]
min_confidence = 80

[tool.ruff]
# Auto-fix everything fixable
fix = true
# Enable both linting and formatting
lint.select = ["ALL"]
lint.ignore = [
    #### specific rules
    "B024",
    "COM812",  # trailing commas, no need since formatter does this for us
    "D100",    # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",    # no blank line before a class
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",    # false positives for local imports
    "E501",    # line too long
    "S101",
    "S311",
    "TRY003",  # external messages in exceptions are too verbose
    "TC006",   # cast parameter as string
    "TD002",
    "TD003",
    "FIX002",  # too verbose descriptions of todos
    "PLR0913", # too many parameters to a method
    "PT011",
    "PT013",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

# - wip acceptance tests ------------------------------------------------------------------------- #
[[tool.mypy.overrides]] # THIS MUST BE CONTIGUOUS WITH THE OTHER MYPY OVERRIDES OR CZ COMMIT FAILS!
module = [""]
ignore_errors = true

[tool.ruff.lint.per-file-ignores]
"tests/acceptance/" = []

[tool.ty.src]
exclude = []

[tool.coverage.run]
omit = []
# - wip acceptance tests ------------------------------------------------------------------------- #
